# ag_vectorless_RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  RESEARCH_PRESENTATION.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: agentic.yaml  base.yaml  bm25.yaml  embedding_free.yaml  hybrid_sota.yaml  knn.yaml  pageindex.yaml  roaming.yaml  router.yaml  three_stage_hybrid.yaml
data/: README.md  vectorless_rag.db
data/golden_qa/: finance_golden_qa.jsonl  finance_summary.json  legal_golden_qa.jsonl  legal_summary.json  technical_golden_qa.jsonl  technical_summary.json
data/processed/finance/: 1ca137009b31.json  382d1607cf94.json  4194b2f24d11.json  47eb3a15b6de.json  63a9fac76a83.json  739e102b29b5.json  75db6fa1a8d1.json  9729529cd8c7.json  9d1fc0c1ec59.json  a1e90a3e0cab.json  a9c99d725b78.json  b7cba5161337.json  c9a6154f5325.json  ddae062d2db8.json  e0dfe83ceb6a.json  e867d7a9d5d4.json  f489149a2fed.json  f7d47fcdb056.json  (+3 more)
docs/: local_stack_blueprint.md  methodology.md
results/: benchmark_summary.json  bm25_finance_telemetry.jsonl  bm25_finance_telemetry.summary.json  bm25_legal_telemetry.jsonl  bm25_legal_telemetry.summary.json  quality_leaderboard.csv  quality_summary.json  three_stage_hybrid_finance_telemetry.jsonl  three_stage_hybrid_finance_telemetry.summary.json
results/per_question/: bm25.jsonl  closed_book.jsonl
scripts/: analyze_errors.py  download_datasets.py  generate_golden_qa.py  quality_benchmark.py  run_benchmark.py  setup_elasticsearch.sh
src/: __init__.py  app.py  router.py
src/backends/: __init__.py  bm25_backend.py  colbert_backend.py  tfidf_backend.py
src/corpus/: __init__.py  preprocessor.py  qa_generator.py
src/evaluation/: __init__.py  cost_tracker.py  llm_judge.py  maintenance.py  ragas_eval.py  runner.py  string_metrics.py
src/pipelines/: __init__.py  agentic_rag.py  base.py  bm25_rag.py  embedding_free_rag.py  hybrid_sota.py  knn_rag.py  pageindex_rag.py  roaming_rag.py  three_stage_hybrid.py
src/utils/: __init__.py  court.py  database.py  llm_client.py  logger_setup.py  logging.py  telemetry.py  token_counter.py
tasks/: todo.md
tests/: test_bm25.py  test_pipelines.py
(+13 files in other folders)
