[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vectorless-rag-benchmark"
version = "0.1.0"
description = "State-of-the-Art Vectorless RAG System & Benchmark Suite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Fahil Ejaz" },
]

dependencies = [
    # --- LLM Providers ---
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "litellm>=1.40.0",
    # --- RAG Pipelines ---
    "pageindex>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-elasticsearch>=0.2.0",
    "langgraph>=0.1.0",
    # --- Evaluation ---
    "ragas>=0.1.10",
    "deepeval>=0.21.0",
    # --- Data Processing ---
    "unstructured[pdf]>=0.14.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    # --- Search ---
    "elasticsearch>=8.13.0",
    # --- Config & Utilities ---
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    # --- Data & Visualization ---
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    # --- CLI & Logging ---
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    # --- Testing ---
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
run-benchmark = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Pragmatic ignores for a research/Streamlit codebase:
#   E501 - long lines (data-heavy seed dicts and prompt strings)
#   E402 - imports after the sys.path bootstrap (required for `src.` imports)
#   E701 - `if cond: continue` guards in tight ingestion loops
#   E741 - single-letter loop vars in numeric/plotting code
ignore = ["E501", "E402", "E701", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
